--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,22 +1,36 @@
-:root {
-    --width-bg: 20%
+@font-face {
+    font-family: "Norse-Bold";
+    src: url(../assets/Norse-Bold.otf);
 }
 
-body {
-    background-color: rgba(140, 87, 190, 0.715);
-}
-
-img {
-    width: var(--width-bg);
+.aside {
+    background-image: url('../assets/StockCake-Cyberpunk\ Cityscape\ View_1718113100.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: 60%;
+    width: 20%;
     height: 100vh;
     position: relative;
 }
 
-.background-logo {
-    background-color: rgba(0, 0, 0, 0.3);
+.bg-logo {
+    background-color: rgba(0, 0, 0, 0.5);
     position: absolute;
-    margin-top: 200px;
-    z-index: 1;
-    width: var(--width-bg);
-    height: 120px;
+    bottom: 60%;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 20px 0px;
+}
+
+.logo {
+    width: 70px;
+    height: 90px;
+}
+
+.text {
+    font-family: 'Norse-Bold';
+    font-size: 60px;
+    color: aliceblue;
 }
